simple flow clicks backend

--- a/backend/themes/default/templates/campaigns.html
+++ b/backend/themes/default/templates/campaigns.html
@@ -967,41 +967,7 @@
                         false,
 
 
-                    paramsIdMapping:
-                        [
-                            {name: "Keyword", parameter: "keyword", token: "", editable_name: false},
-                            {name: "Cost", parameter: "cost", token: "", editable_name: false},
-                            {name: "Currency", parameter: "currency", token: "", editable_name: false},
-                            {name: "External ID", parameter: "external_id", token: "", editable_name: false},
-                            {
-                                name: "Creative ID",
-                                parameter: "utm_creative",
-                                token: "{{ad.name}}",
-                                editable_name: false
-                            },
-                            {
-                                name: "AD Campaign ID",
-                                parameter: "utm_campaign",
-                                token: "{{campaign.name}}",
-                                editable_name: false
-                            },
-                            {name: "Keyword", parameter: "keyword", token: "", editable_name: false},
-                            {
-                                name: "Site",
-                                parameter: "utm_source",
-                                token: "{{site_source_name}}",
-                                editable_name: false
-                            },
-                            {name: "Sub id 1", parameter: "sub_id_1", token: "", editable_name: true},
-                            {name: "Sub id 2", parameter: "sub_id_2", token: "", editable_name: true},
-                            {name: "Sub id 3", parameter: "sub_id_3", token: "", editable_name: true},
-                            {name: "Sub id 4", parameter: "sub_id_4", token: "", editable_name: true},
-                            {name: "Sub id 5", parameter: "sub_id_5", token: "", editable_name: true},
-                            {name: "Sub id 6", parameter: "sub_id_6", token: "", editable_name: true},
-                            {name: "Sub id 7", parameter: "sub_id_7", token: "", editable_name: true},
-                            {name: "Sub id 8", parameter: "sub_id_8", token: "", editable_name: true},
-                            {name: "Sub id 9", parameter: "sub_id_9", token: "", editable_name: true},
-                            {name: "Sub id 10", parameter: "sub_id_10", token: "", editable_name: true}
+                    paramsIdMapping:[
                         ],
 
                     // S2S Postback
@@ -1014,6 +980,8 @@
                         []
                 }
                 ,
+                baseParamsIdMapping:[
+                        ],
                 flowSchemes: ['position', 'weight'],
                 statuses:
                     ['active', 'paused'],
@@ -1136,8 +1104,21 @@
             this.loadCampaigns();
             this.$root.$on('load-campaigns', this.loadCampaigns);
             this.generateTrackingScript();
+            this.loadSettings();
         },
         methods: {
+            loadSettings() { // todo: make it global
+                fetch("/backend/api/settings/", {
+                    credentials: "include"
+                })
+                    .then((r) => r.json())
+                    .then((data) => {
+                        if (data.subIdMapping) {
+                            this.baseParamsIdMapping = JSON.parse(JSON.stringify(data.subIdMapping));
+                            this.form.paramsIdMapping = JSON.parse(JSON.stringify(this.baseParamsIdMapping));
+                        }
+                    });
+            },
             addFilter() {
                 if(!Array.isArray(this.flowForm.filters)) {
                     this.flowForm.filters = [];
@@ -1703,30 +1684,11 @@
                     cost: 0,
                     cost_currency: 'USD',
                     cost_from_cost_parameter: false,
-                    paramsIdMapping: [...this.defaultParamMappings()],
+                    paramsIdMapping: JSON.parse(JSON.stringify(this.baseParamsIdMapping)),
                     postbacks: [],
                     flows: []
                 };
             },
-            defaultParamMappings() {
-                return [
-                    {name: "Keyword", parameter: "keyword", token: "", editable_name: false},
-                    {name: "Cost", parameter: "cost", token: "", editable_name: false},
-                    {name: "Currency", parameter: "currency", token: "", editable_name: false},
-                    {name: "External ID", parameter: "external_id", token: "", editable_name: false},
-                    {name: "Creative ID", parameter: "utm_creative", token: "ad.name", editable_name: false},
-                    {
-                        name: "AD Campaign ID",
-                        parameter: "utm_campaign",
-                        token: "campaign.name",
-                        editable_name: false
-                    },
-                    {name: "Site", parameter: "utm_source", token: "site_source_name", editable_name: false},
-                    {name: "Sub id 1", parameter: "sub_id_1", token: "", editable_name: true},
-                    {name: "Sub id 2", parameter: "sub_id_2", token: "", editable_name: true}
-                    // добавь остальные при необходимости
-                ];
-            }
 
 
         }
