--- a/backend/themes/default/templates/campaigns.html
+++ b/backend/themes/default/templates/campaigns.html
@@ -321,6 +321,8 @@
                                                 </v-row>
 
                                                 <v-divider class="my-4"></v-divider>
+                                                <v-divider class="my-4"></v-divider>
+                                                <h3>Add New</h3>
 
                                                 <!-- Добавление нового -->
                                                 <v-row dense>
@@ -980,8 +982,7 @@
                         []
                 }
                 ,
-                baseParamsIdMapping:[
-                        ],
+                baseParamsIdMapping:[],
                 flowSchemes: ['position', 'weight'],
                 statuses:
                     ['active', 'paused'],
