--- a/backend/themes/default/templates/domains.html
+++ b/backend/themes/default/templates/domains.html
@@ -88,6 +88,7 @@
                             hide-default-footer
                             dense
                             class="elevation-1 mt-4"
+                            :items-per-page="-1"
                     >
                         <template v-slot:item.domain="{ item }">
                             <a v-if="item.domain" :href="'https://'+item.domain" target="_blank">
