feat: Update link rendering in campaigns table to be clickable

--- a/backend/themes/default/templates/campaigns.html
+++ b/backend/themes/default/templates/campaigns.html
@@ -835,7 +835,7 @@
                         </template>
 
                         <template v-slot:item.link="{ item }">
-                            {{ domainsMap[item.domain_id] }}/{{ item.alias }}
+                            <a :href="'https://' + domainsMap[item.domain_id] + '/' + item.alias" target="_blank">https://{{ domainsMap[item.domain_id] }}/{{ item.alias }}</a>
                         </template>
 
                         <template v-slot:item.status="{ item }">
