--- a/backend/themes/default/templates/about.html
+++ b/backend/themes/default/templates/about.html
@@ -6,6 +6,7 @@
             <v-col cols="3">
                 <v-tabs vertical
                 v-model="tabAbout">
+                    <v-tab>Logs</v-tab>
                     <v-tab>Overview</v-tab>
                     <v-tab>Dashboard</v-tab>
                     <v-tab>Campaigns</v-tab>
@@ -24,6 +25,12 @@
 
             <v-col cols="9">
                 <v-tabs-items v-model="tabAbout">
+                    <v-tab-item>
+                        <p>
+                            AKM tracker Logs links
+                            <a href="/_akm_tracker_debug">View Logs</a>
+                        </p>
+                    </v-tab-item>
                     <v-tab-item>
                         <p>
                             AKM tracker is a web application designed to help you manage and track your affiliate marketing campaigns.
