feat: Open Logs link in a new tab

--- a/backend/themes/default/templates/about.html
+++ b/backend/themes/default/templates/about.html
@@ -28,7 +28,7 @@
                     <v-tab-item>
                         <p>
                             AKM tracker Logs links
-                            <a href="/_akm_tracker_debug">View Logs</a>
+                            <a href="/_akm_tracker_debug" target="_blank">View Logs</a>
                         </p>
                     </v-tab-item>
                     <v-tab-item>
